Mark up of Header is done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
       />
    </head>
    <body>
+      <!-- Header Start -->
+      <header>
+         <div class="container">
+            <a href="#">
+               <img src="images/logo.svg" alt="Manage" />
+            </a>
+         </div>
+         <nav class="primary-navigation">
+            <ul class="nav-list">
+               <li><a href="#">Pricing</a></li>
+               <li><a href="#">Product</a></li>
+               <li><a href="#">About Us</a></li>
+               <li><a href="#">Careers</a></li>
+               <li><a href="#">Community</a></li>
+            </ul>
+         </nav>
+         <button class="button">Get Started</button>
+      </header>
+      <!-- Header End -->
+
       <script type="module" src="/main.js"></script>
    </body>
 </html>
