Mark up of 1st section of main is done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
       </header>
       <!-- Header End -->
 
+      <!-- Main Start -->
+      <main>
+         <section>
+            <div class="container">
+               <div class="even-columns">
+                  <div>
+                     <h1 class="fs-primary-heading fw-bold">
+                        Bring everyone together to build better products.
+                     </h1>
+                     <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deleniti
+                        nemo tempora, nobis quae labore eos voluptate atque. Amet rem libero, in eum
+                        sed nulla cum beatae animi necessitatibus aspernatur.
+                     </p>
+                     <button class="button">Get Started</button>
+                  </div>
+                  <div>
+                     <img src="images/illustration-intro.svg" alt="" />
+                  </div>
+               </div>
+            </div>
+         </section>
+      </main>
+      <!-- Main End -->
+
       <script type="module" src="/main.js"></script>
    </body>
 </html>
