Mark up of 2nd section of main is done

--- a/index.html
+++ b/index.html
@@ -56,6 +56,52 @@
                </div>
             </div>
          </section>
+
+         <!-- 2nd Section -->
+         <section>
+            <div class="container">
+               <div class="even-columns">
+                  <div>
+                     <h2 class="font-size-secondary-heading fw-bold">
+                        What's different about Manage?
+                     </h2>
+                     <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa numquam
+                        officia, aliquid illo modi dolor error ea quam. Expedita, vel.
+                     </p>
+                  </div>
+                  <div>
+                     <ul role="list" class="numbered-items">
+                        <li>
+                           <h3 class="fs-600 fw-bold">Track company-wide progress</h3>
+                           <p>
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                              provident totam assumenda officiis. Officiis unde blanditiis sapiente
+                              dignissimos autem vel saepe repudiandae soluta non aut? Vel deserunt
+                              ratione voluptate reprehenderit.
+                           </p>
+                        </li>
+                        <li>
+                           <h3 class="fs-600 fw-bold">Advanced built-in-reports</h3>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ab
+                              ducimus consequatur reprehenderit recusandae vitae, minus iste
+                              mollitia quo odio.
+                           </p>
+                        </li>
+                        <li>
+                           <h3 class="fs-600 fw-bold">Everything you need in one place</h3>
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, nemo!
+                              Rem impedit consectetur harum pariatur fugit perferendis molestiae
+                              error libero.
+                           </p>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <!-- Main End -->
 
