--- a/index.html
+++ b/index.html
@@ -102,6 +102,28 @@
                </div>
             </div>
          </section>
+
+         <!-- 3rd Section - Carousel -->
+         <section class="carousel">
+            <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
+
+            <!-- Carousel here -->
+            <button class="button">Get Started</button>
+         </section>
+
+         <!-- 4th section -->
+         <section class="cta | bg-primary-400 text-neutral-100">
+            <div class="container">
+               <div class="even-columns">
+                  <div>
+                     <p class="fs-secondary-heading fw-bold">Simplify how your team works today.</p>
+                  </div>
+                  <div>
+                     <button class="button" data-type="inverted">Get Started</button>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <!-- Main End -->
 
